spacing issues on index

--- a/public/css/homepagestyle.css
+++ b/public/css/homepagestyle.css
@@ -20,7 +20,7 @@ html {
  	margin:0;
  	background-color:#cdd0d6; /*cc4747*/
  	position: relative;
- 	padding-bottom: 9rem;
+ 	padding-bottom: 5rem;
  	min-height: 100%;
  }
 body p{
@@ -31,6 +31,7 @@ body p{
 	width:82%;
 	margin:auto;
 	overflow:hidden;
+	padding-top: 10px;
 }
  ul{
 	margin:0;
